Fix: adjusted spacing and size of the aside bar search input

--- a/frontend/src/styles/aside.css
+++ b/frontend/src/styles/aside.css
@@ -1,15 +1,18 @@
 .search-wrapper {
-padding: 1rem;
+padding: 0.5rem;
 background-color: #f1f1f1;
 border-radius: 24px;
 border: none;
 display: flex;
 }
 
+.search-wrapper svg {
+margin: 0.5rem;
+}
+
 #search-field {
     background-color: #f1f1f1;
     font-size: 1.15rem;
-    margin-left: 1rem;
     border: none;
     outline: none;
     }
